src/test/testData/AnnotatorTestData.java
package testData;

public class AnnotatorTestData {


    public static void main(String[] args) {
        System.out.println("purple:website");
        System.out.println("purple:key with spaces");
        System.out.println("purple:<error descr=" + "Unresolved property" + ">websit</error>");
    }
}
